fix spacing in selectors

--- a/css/unicorn-styles.css
+++ b/css/unicorn-styles.css
@@ -2,14 +2,20 @@
 
 /* base fonts */
 
-html, body {
+html,
+body {
   color: #2C858D;
   font-family: 'Dosis', sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 800;
   margin-bottom: 15px;
 }
